# fedflow

./: .gitignore  LICENSE  README.md  main.py  requirements.txt  setup.cfg  setup.py
docs/: .buildinfo  CNAME  _config.yml  cifar_example.html  component.html  config.html  core.html  example.html  fedflow.html  genindex.html  index.html  index.md  mail.html  mnist_example.html  objects.inv  py-modindex.html  search.html  searchindex.js  start.html  utils.html
docs/_modules/: index.html
docs/_sources/: component.rst.txt  core.rst.txt  example.md.txt  index.rst.txt  mail.rst.txt  mnist_example.rst.txt  start.rst.txt  utils.rst.txt
docs/_static/: documentation_options.js
docs/api/: README.md  core.md  mail.md  utils.md
docs/core/: index.html
docs/example/: index.html
docs/examples/: README.md
docs/fedflow/: index.html
docs/genindex/: index.html
docs/mail/: index.html
docs/py-modindex/: index.html
docs/search/: index.html
docs/start/: README.md  index.html  quick-start.md
docs/utils/: index.html
examples/cifar_example/: aggregate_task.py  cifar_conf.py  cifar_dataset.py  cifar_net.py  config.yaml  history.json  lenet5.py  main.py  split_task.py  train_task.py
examples/mnist_example/: aggregate_task.py  download_task.py  lenet5.py  main.py  train_task.py
fedflow/: __init__.py  config.py  fedflow.py  log.py
fedflow/core/: __init__.py  dag.py  data.py  graph.py  op.py  scheduler.py  scope.py
fedflow/mail/: send_mail.py  (+1 more)
sphinxdocs/: make.bat
tests/: config.yaml  config_test.py  fedflow_test.py  mail_test.py  mnist.py  test_scope.py
(+64 files in other folders)
