[metadata]
name = fedflow
version = 0.2.0.beta
author = malanore
author_email = malanore.z@gmail.com
description = auto-scheduler for pytorch task.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/malanore-z/fedflow
project_urls =
    Bug Tracker = https://github.com/malanore-z/fedflow/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.4

[options.packages.find]
where = src